# magma-exploration

magma-common/: Cargo.toml
magma-common/src/: algebra.rs  entry.rs  hash.rs  lib.rs  request.rs
magma-server/: Cargo.toml
magma-server/src/: lib.rs
