[package]
name = "magma-server"
version = "0.1.0"
authors = ["memoryleak47 <memoryleak47@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magma-common = { path = "../magma-common" }
async-trait = "0.1.42"
futures = "0.3"
